--- a/tests/configs/input_vars_example.yaml
+++ b/tests/configs/input_vars_example.yaml
@@ -1,4 +1,4 @@
 transforms: |
-  base64(input="$.compressed_data")
-  format_from_gzip()
+  $.decoded = decode_base64(source=$.compressed_data)
+  decompress_gzip(source=$.decoded)
   send_stdout() 
